# axum_lambda_githubactions

./: README.md
.github/workflows/: ci.yml  dev.yml
container/: Cargo.toml  Dockerfile
container/.cargo/: config
container/docker/: arm64.Dockerfile  x86_64.Dockerfile
container/src/: index.rs  lib.rs  main.rs
container/src/controllers/: health_controller.rs
